--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,27 @@
 			<artifactId>spring-context</artifactId>
 			<version>3.2.2.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>javafx</artifactId>
+			<version>2.0</version>
+			<systemPath>/usr/lib/jvm/java-7-oracle/jre/lib/jfxrt.jar</systemPath>
+			<scope>system</scope>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<target>1.7</target>
+					<source>1.7</source>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
