--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<dependency>
 			<groupId>com.googlecode.grep4j</groupId>
 			<artifactId>grep4j</artifactId>
-			<version>1.8.0</version>
+			<version>1.8.5</version>
 		</dependency>
 
 		<dependency>
@@ -24,6 +24,12 @@
 			<version>2.0</version>
 			<systemPath>/usr/lib/jvm/java-7-oracle/jre/lib/jfxrt.jar</systemPath>
 			<scope>system</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.11.6</version>
 		</dependency>
 	</dependencies>
 
